<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>firstapp</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>war</packaging>

    <name>firstapp Maven Webapp</name>
    <url>https://www.notion.so/majortim/Spring-Framework-de723bdd476f4442aa3b07925189e3ae</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <!--
        <java.version>1.11</java.version>
        -->
        <org.springframework-version>5.3.8</org.springframework-version>
        <org.springframework.security-version>5.5.1</org.springframework.security-version>
        <org.aspectj-version>1.9.7</org.aspectj-version>
        <org.log4j-version>2.14.1</org.log4j-version>
        <org.taglibs-version>1.2.5</org.taglibs-version>
        <cargo.version>1.9.5</cargo.version>
        <container.home/>
    </properties>

    <dependencies>
        <!-- Spring -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${org.springframework-version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webmvc</artifactId>
            <version>${org.springframework-version}</version>
        </dependency>

        <!-- Spring Security (used for CSRF protection only) -->
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-web</artifactId>
            <version>${org.springframework.security-version}</version>
        </dependency>

        <!-- AspectJ -->
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjrt</artifactId>
            <version>${org.aspectj-version}</version>
        </dependency>

        <!-- Logging -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${org.log4j-version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>${org.log4j-version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
            <version>1.7.31</version>
        </dependency>

        <!-- @Inject -->
        <dependency>
            <groupId>javax.inject</groupId>
            <artifactId>javax.inject</artifactId>
            <version>1</version>
        </dependency>

        <!-- Servlet API -->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>3.1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet.jsp</groupId>
            <artifactId>javax.servlet.jsp-api</artifactId>
            <version>2.3.3</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.taglibs</groupId>
            <artifactId>taglibs-standard-spec</artifactId>
            <version>${org.taglibs-version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.taglibs</groupId>
            <artifactId>taglibs-standard-impl</artifactId>
            <version>${org.taglibs-version}</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>firstapp</finalName>
        <pluginManagement>
            <!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
            <plugins>
                <plugin>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>
                <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging -->
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.0.2</version>
                    <configuration>
                        <encoding>${project.build.sourceEncoding}</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.0</version>
                    <configuration>
                        <encoding>${project.build.sourceEncoding}</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.22.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>3.2.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>2.5.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>2.8.2</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.cargo</groupId>
                    <artifactId>cargo-maven3-plugin</artifactId>
                    <version>${cargo.version}</version>
                    <configuration>
                        <!--
                        <argLine>-Djava.security.egd=file:/dev/urandom</argLine>
                        -->
                        <container>
                            <containerId>tomcat9x</containerId>
                            <home>${container.home}</home>
                            <!--
                            <extraClasspath>
                                <pathelement location="${container.home}\bin\bootstrap.jar"/>
                                <pathelement location="${container.home}\bin\tomcat-juli.jar"/>
                            </extraClasspath>
                            -->
                            <!--
                            <append>false</append>
                            <log>${container.home}/logs/maven.log</log>
                            <output>${container.home}/logs/cargo.log</output>
                            -->
                            <dependencies>
                            <dependency>
                                <groupId>org.slf4j</groupId>
                                <artifactId>slf4j-api</artifactId>
                            </dependency>
                            </dependencies>
                        </container>
                        <configuration>
                            <type>existing</type>
                            <home>${container.home}</home>
                            <properties>
                                <cargo.jvmargs>
                                    --add-opens=java.base/java.lang=ALL-UNNAMED
                                    --add-opens=java.base/java.io=ALL-UNNAMED
                                    --add-opens=java.base/java.util=ALL-UNNAMED
                                    --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
                                    --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED
                                    -Djava.util.logging.config.file="C:/Web Container/apache-tomcat-9.0.50/conf/logging.properties"
                                    -Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager
                                    -Djava.protocol.handler.pkgs=org.apache.catalina.webresources
                                    -Dorg.apache.catalina.security.SecurityListener.UMASK=0027
                                    -Dignore.endorsed.dirs=
                                    -Djdk.tls.ephemeralDHKeySize=2048
                                    -Dfile.encoding=UTF8
                                    -Duser.language=en
                                    -Djava.security.properties=${project.build.directory}\classes\security.properties
                                    -Djava.security.egd=file:/dev/urandom
                                </cargo.jvmargs>
                                <cargo.start.jvmargs>
                                    <!--
                                    -cp "${container.home}/bin/bootstrap.jar:tomcat-juli.jar"
                                    -->
                                </cargo.start.jvmargs>
                            </properties>
                        </configuration>
                    </configuration>
                    <executions>
                        <execution>
                            <id>start</id>
                            <phase>pre-integration-test</phase>
                            <goals>
                                <goal>start</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>stop</id>
                            <phase>post-integration-test</phase>
                            <goals>
                                <goal>stop</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>package</id>
                            <phase>post-integration-test</phase>
                            <goals>
                                <goal>package</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
